--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -84,6 +84,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - run: echo ${{needs.init.outputs.output1}}
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -218,6 +219,7 @@ jobs:
       name: ${{needs.init.outputs.output1}}
 
     steps:
+      - run: echo ${{needs.init.outputs.output1}}
       - name: Checkout repository
         uses: actions/checkout@v3
 
