--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -273,6 +273,7 @@ jobs:
       name: ${{needs.init.outputs.output1}}
 
     steps:
+      - run: echo ${{needs.init.outputs.output1}}
       - name: Checkout repository
         uses: actions/checkout@v3
 
