--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -14,8 +14,8 @@ on:
         required: true
         options:
           - build
-          - deploy-to-dev
-          - release-to-prod
+          - dev
+          - prod
       deployFromArtifactory:
         type: boolean
         description: Do you want to deploy/release from pre-existing build version from artifactory?
@@ -28,8 +28,6 @@ jobs:
     strategy:
       fail-fast: true
     runs-on: ubuntu-latest
-    outputs:
-      output1: ${{ steps.env.outputs.ename }}
 
     steps:
       - name: Parameterized build inputs
@@ -43,33 +41,22 @@ jobs:
           echo 'Event name: ${{github.event_name}}'
           echo 'Event type: ${{github.event.action}}'
 
-      - name: Get environment name
-        uses: rishabhgupta/split-by@v1
-        id: split
-        with:
-          string: ${{ inputs.action }}
-          split-by: '-'
-
-      - id: env
-        run: |
-          echo "::set-output name=ename::${{ steps.split.outputs._2}}"
-
       - name: Validate existence of artifact version if chosen to deploy from artifactory
-        if: (inputs.action == 'deploy-to-dev' || inputs.action == 'release-to-prod') && (inputs.deployFromArtifactory == true && inputs.artifactVersion == '')
+        if: (inputs.action == 'dev' || inputs.action == 'prod') && (inputs.deployFromArtifactory == true && inputs.artifactVersion == '')
         uses: actions/github-script@v3
         with:
           script: |
             core.setFailed('Deploy from artifactory option is selected but artifact version is not provided!')
 
       - name: Validate version getting released to Prod if chosen to deploy from artifactory
-        if: (inputs.action == 'release-to-prod' && inputs.deployFromArtifactory == true && contains(inputs.artifactVersion, 'SNAPSHOT'))
+        if: (inputs.action == 'prod' && inputs.deployFromArtifactory == true && contains(inputs.artifactVersion, 'SNAPSHOT'))
         uses: actions/github-script@v3
         with:
           script: |
             core.setFailed('Attempt to release snapshot versions to prod is not allowed!')
 
       - name: Validate branch getting released to Prod
-        if: (inputs.action == 'release-to-prod' && inputs.deployFromArtifactory == false && startsWith(github.ref_name, 'release/') == false)
+        if: (inputs.action == 'prod' && inputs.deployFromArtifactory == false && startsWith(github.ref_name, 'release/') == false)
         uses: actions/github-script@v3
         with:
           script: |
@@ -84,7 +71,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - run: echo ${{needs.init.outputs.output1}}
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -165,7 +151,7 @@ jobs:
 
   publish:
     name: Publish Artifacts
-    if: inputs.action == 'build' || inputs.action == 'deploy-to-dev' || inputs.action == 'release-to-prod'
+    if: inputs.action == 'build' || inputs.action == 'dev' || inputs.action == 'prod'
     strategy:
       fail-fast: true
     needs: security
@@ -209,17 +195,16 @@ jobs:
     if: |
       always() &&
       needs.init.result == 'success' &&
-      inputs.action == 'deploy-to-dev' &&
+      inputs.action == 'dev' &&
       (needs.publish.result == 'success' || inputs.deployFromArtifactory == true)
     strategy:
       fail-fast: true
     needs: publish
     runs-on: ubuntu-latest
     environment:
-      name: ${{needs.init.outputs.output1}}
+      name: ${{ inputs.action }}
 
     steps:
-      - run: echo ${{needs.init.outputs.output1}}
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -263,17 +248,16 @@ jobs:
     if: |
       always() &&
       needs.init.result == 'success' &&
-      inputs.action == 'release-to-prod' &&
+      inputs.action == 'prod' &&
       (needs.publish.result == 'success' || inputs.deployFromArtifactory == true)
     strategy:
       fail-fast: true
     needs: deploy_to_dev
     runs-on: ubuntu-latest
     environment:
-      name: ${{needs.init.outputs.output1}}
+      name: ${{ inputs.action }}
 
     steps:
-      - run: echo ${{needs.init.outputs.output1}}
       - name: Checkout repository
         uses: actions/checkout@v3
 
